--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^12.8.3",
     "antd-mobile": "^2.3.4",
     "antd-mobile-icons": "^0.2.2",
+    "node-sass": "^4.14.1",
     "axios": "^0.25.0",
     "less": "^4.1.2",
     "react": "^17.0.2",
@@ -18,7 +19,9 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2",
-    "zent": "^9.12.4"
+    "zent": "^9.12.4",
+    "sass-loader": "^12.6.0",
+    "web-vitals": "^2.1.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -28,7 +31,10 @@
     "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
-    "extends": "react-app",
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ],
     "rules": {
       "no-undef": "off",
       "no-restricted-globals": "off",
