--- a/package.json
+++ b/package.json
@@ -5,13 +5,20 @@
   "private": true,
   "homepage": "./",
   "dependencies": {
+    "@craco/craco": "^6.4.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "antd-mobile": "^2.3.4",
+    "antd": "^4.18.4",
+    "antd-mobile": "^5.9.5",
     "antd-mobile-icons": "^0.2.2",
+    "antd-mobile-v2": "^2.3.4",
     "node-sass": "^4.14.1",
     "axios": "^0.25.0",
+    "classnames": "^2.3.1",
+    "craco-less": "^2.0.0",
+    "prop-types": "^15.8.1",
+    "querystring": "^0.2.1",
     "less": "^4.1.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -21,14 +28,19 @@
     "web-vitals": "^1.1.2",
     "zent": "^9.12.4",
     "sass-loader": "^12.6.0",
+    "redux": "^4.1.2",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "web-vitals": "^2.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "craco start",
+    "build": "craco build",
+    "test": "craco test",
     "eject": "react-scripts eject",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "dev": "webpack-dev-server --devtool eval --progress --colors --content-base build --history-api-fallback"
   },
   "eslintConfig": {
     "extends": [
@@ -54,7 +66,29 @@
     ]
   },
   "devDependencies": {
+    "babel-plugin-import": "^1.13.3",
+    "css-loader": "^5.2.7",
+    "file-loader": "^6.2.0",
+    "html-loader": "^1.3.2",
+    "html-webpack-plugin": "^4.5.2",
+    "less": "^4.1.2",
+    "less-loader": "^7.3.0",
+    "style-loader": "^2.0.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.1"
     "gh-pages": "^3.2.3",
     "mockjs": "^1.1.0"
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
+  "main": "craco.config.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/ayccwhd/E-commerce-demo.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/ayccwhd/E-commerce-demo/issues"
 }
