--- a/package.json
+++ b/package.json
@@ -77,7 +77,7 @@
     "url-loader": "^4.1.1",
     "webpack": "^4.44.2",
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.1"
+    "webpack-dev-server": "^3.11.1",
     "gh-pages": "^3.2.3",
     "mockjs": "^1.1.0"
   },
