--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
-    "antd-mobile": "^2.3.4",
+    "antd-mobile": "^5.10.4",
     "antd-mobile-icons": "^0.2.2",
+    "antd-mobile-v2": "^2.3.4",
     "axios": "^0.25.0",
     "less": "^4.1.2",
     "react": "^17.0.2",
